src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Campaign_Member_Key__c</fullName>
        <description>Used by the Interactions process to update an existing Campaign Member. Set to Lead.ID or Contact.ID + * + Campaign.ID. Also updated by a workflow rule.</description>
        <externalId>true</externalId>
        <inlineHelpText>Used by the Interactions process to update an existing Campaign Member.</inlineHelpText>
        <label>Campaign Member Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>This field is for the description of the campaign member. The standard description field is not editable</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Guests_Attended__c</fullName>
        <label>Number of Guests Attended</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Guests__c</fullName>
        <label>Number of Guests</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Id__c</fullName>
        <externalId>true</externalId>
        <label>Previous Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <label>Registration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Responded</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>No-Show</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__Activity_Date__c</fullName>
        <inlineHelpText>Date of the last Campaign Monitor activity.</inlineHelpText>
        <label>Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wbsendit__Activity__c</fullName>
        <description>Last Campaign Monitor activity type.</description>
        <inlineHelpText>Last Campaign Monitor activity type.</inlineHelpText>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bounced</fullName>
                </value>
                <value>
                    <fullName>Clicked</fullName>
                </value>
                <value>
                    <fullName>Opened</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__Clicks__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Shows number of times the subscriber clicked links from this email campaign.</inlineHelpText>
        <label>Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Opens__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Shows number of times the subscriber opened this email campaign.</inlineHelpText>
        <label>Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <label>Event</label>
    </recordTypes>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>